2006-05-08  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkdialog.c: Added Gtk::Dialog#get_response as an alias of 
	Gtk::Dialog#get_response_for_widget. 
	* src/rbgtkcurve.c: Added Gtk::Curve#gamma=. 
	* src/rbgtkclipboard.c: Gtk::Clipboard#set_can_store accept nil as an
	argument.
	* src/rbgtkwindow.c: Gtk::Window#active_(focus|default) was wrong name.
	So they've been deprecated and added 
	Gtk::Window#activate_(focus|default) instead.

2006-05-04  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/misc/fileselection.rb, itemfactory.rb, itemfactory2.rb: 
	Show "Deprecated" message first.
	* sample/misc/cairo-pong.rb: Fixed warning when calling 
	@drawing_area.queue_draw after @drawing_area is broken.

2006-04-26  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtk.c: Added reference to Gtk::Window until the widget is
	destroyed. This change is for backward compatibility and usability.

2006-04-15  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkmenushell.c: Added G_CHILD_ADD.
	* src/rbgtknotebook.c: ditto.
	* src/rbgtktable.c: ditto.

2006-04-08  Mario Steele 

	* sample/gtk-demo/images.rb: Read the image with "rb" mode not "r".

2006-03-18  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkaccelgroup.c: Follow new GRClosure API. Call
	g_rclosure_attach.

2006-02-07  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkwidget.c (widget_render_icon): the third argument
	'detail' is optional and accepts nil.

2006-01-31  Tilman Sauerbeck <tilman@code-monkey.de>

	* src/rbgtkwidget.c: Fixed a wrong parameter of Gtk::Widget#set_colormap. 

2006-01-28  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkwidget.c: Added Gtk::Widget#set_widget by  Daniel Chokola.
	Added Gtk::Widget#set_requisition.

2006-01-27  Geoff Youngs <g@intersect-uk.co.uk>

	* src/rbgdkproperty.c: Fix to be able to use _NET_WM_PID property.
	* sample/misc/ipc.rb: Added.
	
2006-01-27  Tilman Sauerbeck <tilman@code-monkey.de>

	* src/rbgdkpixbuf.c: Fixed wrong argument of 
	Gdk::Pixbuf#render_pixmap_and_mask.
