@@ -1,3 +1,8 @@
+2006-05-17  Kouhei Sutou  <kou@cozmixng.org>
+
+	* src/rbgtkmenuitem.c: Added G_CHILD_{ADD,REMOVE} to
+	Gtk::MenuItem#set_submenu and Gtk::MenuItem#remove_menu.
+
 2006-05-08  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* src/rbgtkdialog.c: Added Gtk::Dialog#get_response as an alias of 
